# luxe

./: .env  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  Makefile  dune-project  eslint.tsconfig.json  package.json  tsconfig.json
_build/: .db  .digest-db  log
_build/default/: META.luxe  README.md  luxe.dune-package  luxe.install  luxe.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmi  dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: luxe.cma  luxe.cmxa  luxe.cmxs  luxe.ml-gen  server.ml  start.ml
_build/default/lib/.luxe.objs/: luxe__Auth.impl.all-deps  luxe__Auth.impl.d  luxe__Emoji.impl.d  luxe__Env.impl.d  luxe__Server.impl.d  luxe__Start.impl.all-deps  luxe__Start.impl.d
_build/default/lib/.luxe.objs/byte/: luxe.cmi  luxe.cmo  luxe.cmt  luxe__Auth.cmi  luxe__Auth.cmo  luxe__Auth.cmt  (+12 more)
_build/default/lib/.merlin-conf/: lib-luxe
_build/default/test/.merlin-conf/: exe-test_luxe
lib/: auth.ml  display.ml  dune  emoji.ml  env.ml  server.ml  start.ml  tui.ml  utils.ml  yt.ml
src/: index.ts
src/controllers/: auth.controller.ts  health.controller.ts  yt.controller.ts
src/env/: index.ts
src/errors/: custom-error.ts  internal-server-error.ts
src/libs/: google.lib.ts  yt.lib.ts
src/routers/: auth.router.ts  health.router.ts  index.router.ts  yt.router.ts
src/server/: index.ts
src/services/: fileio.service.ts
src/utils/: index.ts
src/validators/: validateRequest.ts
templates/: luxe.html
test/: dune
(+39 files in other folders)
