(lang dune 3.15)

(name luxe)

(generate_opam_files true)

(source
 (github benodiwal/luxe))

(authors "Sachin Beniwal")

(maintainers "Sachin Beniwal")

(license MIT)

(documentation https://url/to/documentatin)

(package
 (name luxe)
 (synopsis "A terminal based client to handle You Tube")
 (description "A terminal based client to handle You Tube")
 (depends ocaml dune)
 (tags
  (topics "ocaml" "YouTube" "terminal")))
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
